alignment fixes

--- a/src/App.css
+++ b/src/App.css
@@ -282,7 +282,7 @@ footer {
 
 .contact-container {
 	position: absolute;
-	bottom: 10%;
+	bottom: 5%;
 	border-radius: 9px;
 	transition: all ease 0.2s;
 }
